--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/vivianhdle/restaurant_tracker#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "cron": "^1.7.1",
     "express": "^4.17.1",
     "mysql": "^2.17.1"
   }
